--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.48.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^2.1.2",
     "webpack": "^5.65.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
