--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "^14.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "react": "^17.0.2",
